# gate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  features.md  install.sh  sample.wsdl
.github/workflows/: release.yml
charts/gate/: Chart.yaml  values.yaml
charts/gate/templates/: NOTES.txt  _helpers.tpl  admin-deployment.yaml  admin-pdb.yaml  admin-service.yaml  configmap.yaml  ingress.yaml  proxy-deployment.yaml  proxy-pdb.yaml  proxy-service.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/admin/: Cargo.toml  build.rs
crates/admin/src/: auth.rs  dashboard.rs  db.rs  errors.rs  gateway_proxy.rs  lib.rs  main.rs  wsdl.rs
crates/admin/src/routes/: api_keys.rs  compositions.rs  header_rules.rs  health.rs  ip_rules.rs  mod.rs  rate_limits.rs  routes.rs  services.rs  stats.rs  upstreams.rs
crates/admin/tests/: test_api_keys.rs  test_auth.rs  test_header_rules.rs  test_rate_limits.rs  test_routes.rs  test_security.rs  test_services.rs  test_stats.rs  test_upstreams.rs
crates/admin/tests/common/: mod.rs
crates/portable/: Cargo.toml
crates/portable/migrations/: 001_init.sql  002_add_upstream_tls.sql  002_create_compositions.sql  003_add_step_internal_route.sql  004_add_composition_schemas.sql  005_add_composition_namespace.sql
crates/portable/src/: config_loader.rs  config_reloader.rs  dashboard.rs  db.rs  errors.rs  health_checker.rs  main.rs  models.rs  request_stats.rs  wsdl.rs
crates/portable/src/proxy_core/: metrics.rs  router.rs  service.rs  soap.rs  state.rs
crates/portable/src/routes/: compositions.rs  health.rs  ip_rules.rs  mod.rs  upstreams.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: circuit_breaker.rs  config.rs  health.rs  lb.rs  logging.rs  main.rs  metrics.rs  router.rs  service.rs  soap.rs  state.rs  test_helpers.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  models.rs  tls.rs
crates/shared/src/composition/: dag.rs  executor.rs  mod.rs  template.rs
crates/standalone/: Cargo.toml  default_8061106684265320313_0_73481.profraw
crates/standalone/src/: auth.rs  config_reloader.rs  gateway_proxy.rs  main.rs  models.rs
crates/standalone/src/proxy_core/: circuit_breaker.rs  lb.rs  mod.rs  service.rs  soap.rs  state.rs
crates/standalone/src/routes/: api_keys.rs  header_rules.rs  health.rs  rate_limits.rs  routes.rs  services.rs  upstreams.rs
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AuthProvider.tsx  Layout.tsx  ThemeProvider.tsx  ui.tsx
dashboard/src/components/__tests__/: ui.test.tsx
dashboard/src/components/flow/: BodyTemplateBuilder.tsx  CompactNode.tsx  FlowCanvas.tsx  ResponseMergeBuilder.tsx  StepInspector.tsx  StepNode.tsx  TestEndpointPanel.tsx  UpstreamHint.tsx  flowTypes.ts  layoutGraph.ts
dashboard/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  sonner.tsx  switch.tsx
dashboard/src/hooks/: useAuth.ts  useTheme.ts  useTimezone.ts
dashboard/src/lib/: api.ts  date.ts  openapi.ts  themes.ts
dashboard/src/lib/__tests__/: api.test.ts
dashboard/src/pages/: ApiKeysPage.tsx  CompositionFormPage.tsx  CompositionsPage.tsx  DashboardPage.tsx  LoginPage.tsx  LogsPage.tsx  NamespaceDetailPage.tsx  RateLimitsPage.tsx  RoutesPage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx  SettingsPage.tsx  UpstreamsPage.tsx
dashboard/src/pages/__tests__/: ServicesPage.test.tsx
deploy/kubernetes/: admin-deployment.yaml  admin-service.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-service.yaml  postgres-statefulset.yaml  proxy-deployment.yaml  proxy-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  serviceaccount.yaml
deploy/kubernetes/portable/: deployment.yaml  pvc.yaml  service.yaml
deploy/kubernetes/standalone/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
gate-deno/: Dockerfile  README.md  build.sh  main.ts
gate-deno/k8s/: configmap.yaml  deployment.yaml  service.yaml
gate-java/: .gitignore  Dockerfile  README.md  build.gradle  build.sh  settings.gradle  test.sh
gate-java/k8s/: configmap.yaml  deployment.yaml  service.yaml
gate-java/src/main/java/com/gate/: GateApplication.java
gate-java/src/main/java/com/gate/config/: ProxyConfig.java
gate-java/src/main/java/com/gate/health/: HealthHandler.java  ServicesHandler.java
gate-java/src/main/java/com/gate/proxy/: GatewayHandler.java  RouterConfig.java
gate-java/src/main/resources/: application.yml
gate-java/src/test/java/com/gate/: GateApplicationTests.java
gate-rust/: Cargo.toml  Dockerfile  README.md  build.sh
gate-rust/k8s/: configmap.yaml  deployment.yaml  service.yaml
gate-rust/src/: main.rs
grafana/dashboards/: traffic-overview.json
grafana/provisioning/dashboards/: dashboards.yml
migrations/: 001_create_upstreams.sql  002_create_targets.sql  003_create_routes.sql  004_create_api_keys.sql  005_create_rate_limits.sql  006_create_request_logs.sql  007_create_services.sql  008_add_route_max_body.sql  009_add_spec_content.sql  010_add_route_auth_skip.sql  011_add_resilience.sql  012_add_route_host_and_cache.sql  013_create_ip_rules.sql  014_add_soap_support.sql  015_add_upstream_tls.sql  015_create_compositions.sql  016_add_step_internal_route.sql  017_add_composition_schemas.sql  018_add_composition_namespace.sql
prometheus/: prometheus.yml
scripts/: coverage.sh
tests/e2e/: run.sh
