[package]
name = "admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
subtle = "2"
rand = "0.8"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
ipnet = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
