[package]
name = "portable"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "portable"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
pingora = { version = "0.7", features = ["proxy", "rustls", "cache"] }
pingora-proxy = "0.7"
pingora-http = "0.7"
pingora-limits = "0.7"
pingora-load-balancing = "0.7"
pingora-cache = "0.7"
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
arc-swap = "1"
dashmap = "6"
futures = "0.3"
http = "1"
bytes = "1"
once_cell = "1"
prometheus = "0.13"
subtle = "2"
ipnet = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.23", features = ["ring"] }
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
url = "2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
