[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
pingora = { version = "0.7", features = ["proxy", "rustls", "cache"] }
pingora-proxy = "0.7"
pingora-http = "0.7"
pingora-limits = "0.7"
pingora-load-balancing = "0.7"
pingora-cache = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
arc-swap = "1"
dashmap = "6"
http = "1"
bytes = "1"
once_cell = "1"
prometheus = "0.13"
subtle = "2"
ipnet = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
deadpool-redis = { version = "0.18", optional = true }

[features]
default = []
redis-backend = ["redis", "deadpool-redis"]
